# KeySafe

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.bat  build.sh  create_icon.py  create_notebook.py  pyproject.toml  setup_security.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  INSTALL.md  SECURITY.md  USAGE.md
secure_credentials/: __init__.py  launcher.py  run_app.py
secure_credentials/src/: __init__.py  hash_utility.py  keepass_backend.py  pass_manager.py  security.py  web_app.py
secure_credentials/src/ui/: __init__.py  gui.py
secure_credentials/templates/: add.html  base.html  edit.html  error.html  index.html  login.html  view.html
