[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure_credentials"
version = "1.0.0"
description = "A secure credential manager with GUI and web interfaces"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "ttkbootstrap>=1.10.1",
    "pykeepass>=4.0.3",
    "pyperclip>=1.8.2",
    "pillow>=9.5.0",
    "pystray>=0.19.4",
    "packaging>=23.1",
    "requests>=2.31.0",
    "olefile>=0.46",
    "flask>=2.3.0",
    "flask-login>=0.6.0",
    "werkzeug>=2.3.0",
    "cryptography>=41.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "autoflake>=2.3.0",
    "pre-commit>=3.5.0",
    "pyinstaller>=5.13.0"
]

[project.scripts]
secure-credentials = "secure_credentials.src.run_app:main"
secure-credentials-web = "secure_credentials.src.web_app:main"

[tool.hatch.build.targets.wheel]
packages = ["secure_credentials"]
